fixed broken link

--- a/apps/_default/static/index.html
+++ b/apps/_default/static/index.html
@@ -312,7 +312,7 @@ def api_DELETE_things(thing_id):
 	  <li><a href="https://py4web.com/_documentation/static/en/chapter-11.html">internationalization and pluralization</a> with a translation UI.</li>
 	  <li>Automatic generation of <a href="https://py4web.com/_documentation/static/en/chapter-08.html">RESTful APIs</a> for your database.</li>
 	  <li>Built-in logic for <a href="https://py4web.com/_documentation/static/en/chapter-13.html#user-impersonation">user impersonation</a>.</li>
-	  <li>Integrated <a href="https://github.com/web2py/py4web/blob/master/apps/_scaffold/settings.py#L75">SSO support for Google, Github, Facebook, Okta, LDAP, PAM</li>
+	  <li>Integrated <a href="https://github.com/web2py/py4web/blob/master/apps/_scaffold/settings.py#L75">SSO support</a> for Google, Github, Facebook, Okta, LDAP, PAM</li>
 	</ul>
       </div>
 
