fixed a few typos

--- a/apps/_default/static/index.html
+++ b/apps/_default/static/index.html
@@ -55,7 +55,7 @@ $ pip install py4web               # install it (but use a venv or Nix)
 $ py4web setup apps                # answer yes to all questions
 $ py4web set_password              # pick a password for the admin
 $ cp -r apps/_scaffold apps/myapp  # make a new app
-$ py4web run apps                  # starts py4web
+$ py4web run apps                  # start py4web
 </code></pre>
 
 Each subfolder of <tt>apps/</tt> with an <tt>__init__.py</tt> is its own app. One py4web can run multiple apps. You just copy the <tt>_scaffold</tt> app to make a new one.
