more docs improvements

--- a/apps/_default/static/index.html
+++ b/apps/_default/static/index.html
@@ -313,6 +313,7 @@ def api_DELETE_things(thing_id):
 	  <li>Automatic generation of <a href="https://py4web.com/_documentation/static/en/chapter-08.html">RESTful APIs</a> for your database.</li>
 	  <li>Built-in logic for <a href="https://py4web.com/_documentation/static/en/chapter-13.html#user-impersonation">user impersonation</a>.</li>
 	  <li>Integrated <a href="https://github.com/web2py/py4web/blob/master/apps/_scaffold/settings.py#L75">SSO support</a> for Google, Github, Facebook, Okta, LDAP, PAM</li>
+	  <li>A built-in <a href="https://py4web.com/_documentation/static/en/chapter-16.html">scheduler</a> for submitting and managing async background tasks.</li>
 	</ul>
       </div>
 
