bigger arrow in default index.html

--- a/apps/_default/static/index.html
+++ b/apps/_default/static/index.html
@@ -22,7 +22,7 @@
       pre { border: 2px solid #15497B; border-left: 20px solid #15497B;}
       main img { border-radius: 5px;}
       main img ~ img { margin-left: 20px; }
-      .huge { margin-top: 0em; font-size: 5em;}
+      .huge { margin-top: 1em; font-size: 5em; line-height: 0.5;}
     </style>
   </head>
   <body>
@@ -38,7 +38,7 @@
       <a class="btn" href="https://github.com/web2py/py4web">Source</a>
       <a class="btn" href="https://groups.google.com/forum/#!forum/py4web">Discuss</a>
       <div class="huge">
-	<a href="#why">⌄</a>
+	<a href="#why">⌄<br/>⌄<br/>⌄</a>
       </div>
     </header>
     <main class="padded">
